# harlequin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  harlequin_tty2web.conf  pre-commit-config.yaml  prql  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: container.yml  publish.yml  release.yml  static.yml  test-build.yml  test.yml
plugins/harlequin_duckdb/: __init__.py  adapter.py  copy_formats.py
plugins/harlequin_sqlite/: __init__.py  adapter.py
scripts/: export_screenshots.py  profile_buffers.py  profile_fast_query.py
src/harlequin/: __init__.py  __main__.py  actions.py  adapter.py  app.py  app.tcss  app_base.py  bindings.py  cache.py  catalog.py  catalog_cache.py  cli.py  colors.py  config.py  config_wizard.py  copy_formats.py  copy_widgets.py  data_prep.py  driver.py  duck_ops.py  editor_cache.py  exception.py  export.py  export_options.py  global.tcss  history.py  keymap.py  keys_app.py  keys_app.tcss  locale_manager.py  messages.py  options.py  plugins.py  transaction_mode.py  windows_timezone.py
src/harlequin/autocomplete/: __init__.py  completers.py  completion.py  constants.py
src/harlequin/components/: __init__.py  adapter_details.py  code_editor.py  confirm_modal.py  data_catalog.py  debug_info.py  error_modal.py  export_screen.py  help_screen.md  help_screen.py  history_screen.py  messages.py  plot_screen.py  results_viewer.py  run_query_bar.py  schema_viewer.py
src/harlequin/components/data_catalog/: __init__.py  database_tree.py  file_tree.py  s3_tree.py  tree.py
src/harlequin/tui/: __init__.py  app.css  app.py  app.tcss  code_editor.py  error_modal.py  results_viewer.py  schema_viewer.py  sql_client.css  sql_client.py  utils.py
src/harlequin/tui/components/: __init__.py  code_editor.py  error_modal.py  export_screen.py  filename_modal.py  help_screen.md  help_screen.py  key_handlers.py  path_suggester.py  results_viewer.py  run_query_bar.py  schema_viewer.py  textarea.py
src/harlequin_config/: cli.py
src/harlequin_duckdb/: __init__.py  adapter.py  catalog.py  cli_options.py  completions.py  interactions.py
src/harlequin_sqlite/: adapter.py  catalog.py  cli_options.py  completions.py  interactions.py
src/harlequin_vscode/: __init__.py
src/marketer/: export_screenshots.py
src/plugins/harlequin_duckdb/: pyproject.toml
src/scripts/: export_screenshots.py  profile_buffers.py  profile_fast_query.py
stubs/pyarrow/: __init__.pyi  compute.pyi  dataset.pyi  feather.pyi  fs.pyi  lib.pyi  orc.pyi  parquet.pyi  types.pyi
stubs/pyperclip/: __init__.pyi
tests/: conftest.py
tests/adapter_tests/: test_duckdb.py  test_sqlite.py
tests/adapter_tests/tests/: conftest.py  test_duckdb.py
tests/data/functional_tests/: small.db  tiny.db
tests/data/functional_tests/small/: drivers.csv  load.sql  schema.sql  schema_sqlite.sql
tests/data/functional_tests/test_keymap_from_config/: config.toml
tests/data/functional_tests/tiny/: load.sql  schema_sqlite.sql
tests/data/unit_tests/completions/: README.md  iris_db.json
tests/data/unit_tests/config/: bad_option_name.toml  default_no_exist.toml  extra_key.toml  good_config.toml  keymaps.toml  keymaps_bad_binding.toml  keymaps_not_array.toml  keymaps_plugin_name.toml  none_profile.toml  not_toml.toml  profile_not_table.toml  profiles_not_table.toml  pyproject.toml
tests/data/unit_tests/sqlite_extension/: hello0.dylib
tests/functional_tests/: conftest.py  test_app.py  test_cache.py  test_colors.py  test_data_catalog.py  test_debug_info_screen.py  test_duck_ops.py  test_export.py  test_help_screen.py  test_history_screen.py  test_keymap_from_config.py  test_keymap_vscode.py  test_keys_app.py  test_layout.py  test_plot.py  test_query_editor.py  test_results_viewer.py  test_run_query_bar.py  test_textarea.py  test_tui.py
tests/functional_tests/__snapshots__/: test_app.ambr  test_data_catalog.ambr  test_debug_info_screen.ambr  test_export.ambr  test_help_screen.ambr  test_history_screen.ambr  test_keys_app.ambr  test_layout.ambr  test_plot.ambr  test_query_editor.ambr  test_results_viewer.ambr  test_run_query_bar.ambr
tests/unit_tests/: test_cli.py  test_colors.py  test_completers.py  test_config.py  test_key_handlers.py  test_plugins.py  test_s3_tree.py
