[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"


[project]

name = "harlequin"
version = "2.1.3"
requires-python = ">=3.9,<3.14"
description = "The SQL IDE for Your Terminal."
authors = [
    { name = "Ted Conbeer", email = "tconbeer@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["sql", "tui", "ide", "harlequin"]
dependencies = [
    # textual and component libraries
    "textual==0.89.1",
    "textual-fastdatatable==0.12.0",
    "textual-textarea==0.15.0",

    # click
    "click==8.1.8",
    "rich-click==1.8.5",

    # other deps
    "duckdb>=0.8.0",
    "shandy-sqlfmt>=0.19.0",
    "platformdirs>=3.10,<5.0",
    "tomlkit>=0.12.5,<0.14.0",
    "questionary==2.0.1",

    # tree-sitter-sql 0.3.8 seems incompatible with tree-sitter 0.24.0
    "tree-sitter-sql==0.3.7",
    "tree-sitter>=0.23.0,<0.25.0",

    # backports
    "importlib_metadata>=8.0; python_version < '3.10'",

    # wheel pins: these packages don't build wheels for all Pythons

    "numpy>=2.0.0,<2.1.0; python_version < '3.10'",
    "numpy>=2.1.0,<2.3.0; python_version >= '3.10'",

    "pyarrow>=18.1.0; python_version >= '3.12'",
]


[project.optional-dependencies]

s3 = ["boto3==1.34.22"]
postgres = ["harlequin-postgres"]
mysql = ["harlequin-mysql"]
odbc = ["harlequin-odbc"]
bigquery = ["harlequin-bigquery"]
trino = ["harlequin-trino"]
databricks = ["harlequin-databricks"]
adbc = ["harlequin-adbc"]
cassandra = ["harlequin-cassandra"]
nebulagraph = ["harlequin-nebulagraph"]


[dependency-groups]
dev = [
    "pre-commit>=3.3,<4",
    "textual-dev==1.0.1; python_version < '3.12'",
    "harlequin-postgres>=1.1.1,<2",
    "harlequin-mysql>=1,<2",
    "pyinstrument>=5,<6",
]
static = [
    "ruff>=0.6,<0.10",
    "mypy>=1.11.0,<2",
    "pandas-stubs>=2,<3",
    "boto3-stubs>=1.34.23,<2",
]
test = [
    "pytest>=7.3.1,<9.0.0",
    "pytest-asyncio==0.21.0",
    "pytest-textual-snapshot @ https://github.com/tconbeer/pytest-textual-snapshot.git#main",
    # extension tests require consistent version of duckdb.
    "duckdb==1.1.1",
]


[project.urls]

Homepage = "https://harlequin.sh"
Documentation = "https://harlequin.sh/docs/getting-started/index"
Repository = "https://github.com/tconbeer/harlequin"
"Bug Tracker" = "https://github.com/tconbeer/harlequin/issues"
Changelog = "https://github.com/tconbeer/harlequin/blob/main/CHANGELOG.md"


[project.scripts]

harlequin = "harlequin.cli:harlequin"


[project.entry-points."harlequin.adapter"]

duckdb = "harlequin_duckdb:DuckDbAdapter"
sqlite = "harlequin_sqlite:HarlequinSqliteAdapter"


[project.entry-points."harlequin.keymap"]

vscode = "harlequin_vscode:VSCODE"


[tool.ruff]

target-version = "py39"


[tool.ruff.lint]

select = ["A", "B", "E", "F", "I"]


[tool.mypy]

python_version = "3.9"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
mypy_path = "stubs,src"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true


[tool.pytest.ini_options]

markers = [
    "online: requeries internet connection (deselect with '-m \"not online\"')",
    "use_cache: override the autouse fixture the disables the buffer cache",
    "flaky_windows: likely to fail for no reason on windows."
]
