[project]

name = "harlequin"
version = "2.5.1"
requires-python = ">=3.10"
description = "The SQL IDE for Your Terminal."
authors = [
    { name = "Ted Conbeer", email = "tconbeer@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["sql", "tui", "ide", "textual", "harlequin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # textual and component libraries
    "textual==6.4.0",
    "textual-fastdatatable==0.14.0",
    "textual-textarea==0.17.2",

    # click
    "click==8.1.8",
    "rich-click==1.8.5",

    # other deps
    "duckdb>=0.8.0; python_version < '3.14'",
    "shandy-sqlfmt>=0.28.2",
    "platformdirs>=3.10,<5.0",
    "tomlkit>=0.12.5,<0.14.0",
    "questionary==2.0.1",

    # ensure we install from wheels
    "duckdb>=1.4.2; python_version >= '3.14'",
    "pandas>=2.3; python_version >= '3.14'",
]


[project.optional-dependencies]

s3 = ["boto3==1.34.22"]
postgres = ["harlequin-postgres"]
mysql = ["harlequin-mysql"]
odbc = ["harlequin-odbc"]
bigquery = ["harlequin-bigquery"]
trino = ["harlequin-trino"]
databricks = ["harlequin-databricks"]
adbc = ["harlequin-adbc"]
cassandra = ["harlequin-cassandra"]
nebulagraph = ["harlequin-nebulagraph"]


[dependency-groups]
dev = [
    "pre-commit>=3.3,<4",
    "textual-dev==1.8.0",
    "harlequin-postgres>=1.1.1,<2",
    "harlequin-mysql>=1,<2",
    "pyinstrument>=5,<6",
]
static = [
    "ruff>=0.14.1",
    "mypy==1.18.2,<2",
    "pandas-stubs>=2,<3",
    "boto3-stubs>=1.34.23,<2",
]
test = [
    "pytest>=7.3.1,<9.0.0",
    "pytest-asyncio==0.21.0",
    "pytest-textual-snapshot @ https://github.com/tconbeer/pytest-textual-snapshot.git#main",
    "boto3==1.34.22",
    # extension tests require consistent version of duckdb.
    "duckdb==1.4.2",
    "flaky>=3.8.1",
]


# For development of related libraries
# [tool.uv.sources]

# textual-fastdatatable = { path = "../textual-fastdatatable" }
# textual-textarea = { path = "../textual-textarea" }


[project.urls]

Homepage = "https://harlequin.sh"
Documentation = "https://harlequin.sh/docs/getting-started/index"
Repository = "https://github.com/tconbeer/harlequin"
"Bug Tracker" = "https://github.com/tconbeer/harlequin/issues"
Changelog = "https://github.com/tconbeer/harlequin/blob/main/CHANGELOG.md"


[project.scripts]

harlequin = "harlequin.cli:harlequin"


[project.entry-points."harlequin.adapter"]

duckdb = "harlequin_duckdb:DuckDbAdapter"
sqlite = "harlequin_sqlite:HarlequinSqliteAdapter"


[project.entry-points."harlequin.keymap"]

vscode = "harlequin_vscode:VSCODE"


[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]

packages = [
    "src/harlequin",
    "src/harlequin_duckdb",
    "src/harlequin_sqlite",
    "src/harlequin_vscode",
]

[tool.hatch.build.targets.sdist]

only-include = [
    "src",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml"
]


[tool.ruff]

target-version = "py310"


[tool.ruff.lint]

select = ["A", "B", "E", "F", "I"]


[tool.mypy]

python_version = "3.10"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
mypy_path = "stubs,src"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true


[tool.pytest.ini_options]

markers = [
    "online: requeries internet connection (deselect with '-m \"not online\"')",
    "use_cache: override the autouse fixture the disables the buffer cache",
    "py12: Only run on Python 3.12 or higher",
]
